plugins {
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '3.1.1' apply false
}

allprojects {
    group = 'homer.tastyworld.frontend'
    version = '1.0.0'

    repositories {
        mavenCentral()
        maven {
            url uri("${rootDir}/local-repo")
        }
    }

    sourceCompatibility = '21'
    targetCompatibility = '21'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.openjfx.javafxplugin'

    dependencies {
        implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
        implementation 'org.slf4j:slf4j-api:1.7.36'
        implementation 'org.slf4j:slf4j-jdk14:1.7.36'
        implementation 'com.rabbitmq:amqp-client:5.16.0'
        implementation 'com.fazecast:jSerialComm:2.10.4'
        compileOnly 'org.projectlombok:lombok:1.18.36'
        annotationProcessor 'org.projectlombok:lombok:1.18.36'
    }
    if (project.name != 'starter-pack') {
        apply plugin: 'application'
        apply plugin: 'org.beryx.jlink'

        dependencies {
            implementation 'homer.tastyworld.frontend:starter-pack:1.0.0'
            runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:$javafx.platform.classifier"
        }
    }

    plugins.withType(JavaPlugin) {
        sourceCompatibility = '21'
        targetCompatibility = '21'
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        sourceCompatibility = '21'
        targetCompatibility = '21'
//        options.compilerArgs += ['--module-path', classpath.asPath]
    }
}

task cleanAll {
    dependsOn subprojects.clean
    doFirst {
        new File(rootDir, "local-repo").deleteDir()
        new File(rootDir, "packaged-apps").deleteDir()
    }
}